# Stunstick

./: .gitignore  CROSS_PLATFORM.md  Directory.Build.props  FAQ.md  README.md  Stunstick.CrossPlatform.sln  parity.md
.github/workflows/: ci.yml  release.yml
scripts/regression/: decompile_regress.sh
scripts/toolchain/: build_studiomdl.ps1  build_studiomdl.sh
src/: Directory.Build.props  README.md
src/Stunstick.App/: Stunstick.App.csproj  StunstickApplication.cs
src/Stunstick.App.Tests/: DecompileAndWorkshopTests.cs  GoldenDiffHelper.cs  HeaderSerializerTests.cs  QcParserTests.cs  Stunstick.App.Tests.csproj
src/Stunstick.App/Compile/: QcDryRunValidator.cs
src/Stunstick.App/Decompile/: AccessedBytesDebugFileWriter.cs  AccessedBytesDebugLogs.cs  DecompileFileNames.cs  DecompileFormat.cs  DecompileOptions.cs  DecompileRequest.cs  GoldSrcMdlDecompileDebugInfoWriter.cs  GoldSrcMdlDecompileManifest.cs  GoldSrcMdlDecompiler.cs  MdlAnimationSmdWriter.cs  MdlDecompileDebugInfoWriter.cs  MdlDecompileManifest.cs  MdlDecompiler.cs  MdlFlexRuleFormatter.cs  MdlProceduralBonesVrdWriter.cs  MdlVertexAnimationVtaWriter.cs
src/Stunstick.App/Inspect/: InspectOptions.cs  MdlInspectOptions.cs  MdlInspectResult.cs  MdlInspector.cs  VpkInspectResult.cs  VpkInspector.cs
src/Stunstick.App/Pack/: GmaPacker.cs  PackRequest.cs  VpkPacker.cs  VpkToolPacker.cs
src/Stunstick.App/Progress/: ProgressReporter.cs  StunstickProgress.cs
src/Stunstick.App/Toolchain/: HlmvReplacement.cs  HlmvViewRequest.cs  IProcessLauncher.cs  ProcessLaunchRequest.cs  StudioMdlCompileRequest.cs  SystemProcessLauncher.cs  ToolArgumentSplitter.cs  ToolchainDiscovery.cs  ToolchainGameEngine.cs  ToolchainLauncher.cs  ToolchainPreset.cs  WineOptions.cs
src/Stunstick.App/Unpack/: ApkUnpacker.cs  GmaUnpacker.cs  HfsUnpacker.cs  PackageEntry.cs  StreamCopy.cs  UnpackRequest.cs  VpkUnpacker.cs
src/Stunstick.App/Viewer/: MdlModelGeometryLoader.cs  MdlPreviewLoader.cs  ModelGeometry.cs
src/Stunstick.App/Workshop/: SteamCmdPrompt.cs  SteamCmdRunner.cs  SteamPipeClient.cs  SteamWorkshopClient.cs  WorkshopCacheLocator.cs  WorkshopDeleteRequest.cs  WorkshopDeleteResult.cs  WorkshopDownloadNamingOptions.cs  WorkshopDownloadOutputType.cs  WorkshopDownloadRequest.cs  WorkshopDownloadResult.cs  WorkshopDownloader.cs  WorkshopIdParser.cs  WorkshopItemDetails.cs  WorkshopListRequest.cs  WorkshopListResult.cs  WorkshopNaming.cs  WorkshopPublishRequest.cs  WorkshopPublishResult.cs  WorkshopPublishVisibility.cs  WorkshopPublishedItem.cs  WorkshopPublisher.cs  WorkshopQuotaRequest.cs  WorkshopQuotaResult.cs
src/Stunstick.Cli/: Program.cs  Stunstick.Cli.csproj
src/Stunstick.Core/: Crc32.cs  Hashing.cs  StunstickFileClassifier.cs  StunstickFileType.cs
src/Stunstick.Core/Compression/: LzmaDecompressor.cs
src/Stunstick.Core/GoldSrc/: GoldSrcMdlBodyPart.cs  GoldSrcMdlBone.cs  GoldSrcMdlFile.cs  GoldSrcMdlHeader.cs  GoldSrcMdlMesh.cs  GoldSrcMdlModel.cs  GoldSrcMdlReader.cs  GoldSrcMdlStripOrFan.cs  GoldSrcMdlTexture.cs  GoldSrcMdlVertexInfo.cs
src/Stunstick.Core/IO/: AccessLoggedStream.cs  AccessedBytesLog.cs  BoundedReadOnlyStream.cs
src/Stunstick.Core/Inspect/: StunstickInspectResult.cs
src/Stunstick.Core/Mdl/: MdlAnimationDesc.cs  MdlBodyPart.cs  MdlBone.cs  MdlConstants.cs  MdlEmbeddedSections.cs  MdlFileNameRewriter.cs  MdlFlex.cs  MdlFlexController.cs  MdlFlexDesc.cs  MdlFlexOp.cs  MdlFlexRule.cs  MdlHeader.cs  MdlMesh.cs  MdlModel.cs  MdlMovement.cs  MdlReader.cs  MdlSequenceDesc.cs  MdlSkinFamily.cs  MdlSubModel.cs  MdlTexture.cs  MdlV53EmbeddedSectionsReader.cs  MdlVertAnim.cs
src/Stunstick.Core/Phy/: PhyFile.cs  PhyReader.cs
src/Stunstick.Desktop/: App.axaml  App.axaml.cs  ConfirmWindow.axaml  ConfirmWindow.axaml.cs  DesktopSettings.cs  InfoWindow.axaml  InfoWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ModelViewerControl.cs  PackageBrowserNode.cs  Program.cs  SingleInstanceIpc.cs  SteamCmdPromptWindow.axaml  SteamCmdPromptWindow.axaml.cs  Stunstick.Desktop.csproj  ToolchainCustomPreset.cs  ToolchainMacro.cs  ToolchainPresetOverrides.cs  WorkshopPublishDraft.cs
src/Stunstick.SteamPipe/: Program.cs  Stunstick.SteamPipe.csproj
tools/MDLForge/: .gitattributes  .gitignore  CMakeLists.txt  README.md
tools/MDLForge/__src2013/src/mathlib/: 3dnow.cpp  mathlib_base.cpp  polyhedron.cpp
tools/MDLForge/mathlib/: mathlib_base.cpp  sseconst.cpp
tools/MDLForge/public/: builddisp.cpp  compressed_vector.h  filesystem.h  filesystem_init.cpp  mathlib.h  minmax.h  optimize.h  phyfile.h  pixelwriter.h  studio.h  vallocator.cpp  vector.h  vector2d.h  vector4d.h  xzp.cpp
tools/MDLForge/public/appframework/: IAppSystem.h
tools/MDLForge/public/dmserializers/: idmserializers.h
tools/MDLForge/public/mathlib/: math_base.h  math_pfns.h
tools/MDLForge/public/maya/: imayavgui.h
tools/MDLForge/public/p4lib/: ip4.h
tools/MDLForge/public/soundsystem/: isoundsystem.h
tools/MDLForge/public/tier0/: memalloc.h  memdbgon.h  platform.h  threadtools.h  wchartypes.h
tools/MDLForge/public/tier1/: convar.h  datamanager.h  interface.h  keyvalues.h  mempool.h  memstack.h  stringpool.h  tier1.h  utlmemory.h  utlrbtree.h  utlvector.h
tools/MDLForge/public/tier2/: tier2.h
tools/MDLForge/public/vstdlib/: pch_vstdlib.h
tools/MDLForge/tier1/: checksum_crc.cpp  checksum_md5.cpp  convar.cpp  generichash.cpp  interface.cpp  keyvalues.cpp  mempool.cpp  memstack.cpp  netadr.cpp  strtools.cpp  utlsymbol.cpp
tools/MDLForge/utils/common/: cmdlib.cpp  filesystem_tools.cpp  filesystem_tools.h  mstristrip.cpp  physdll.cpp
tools/MDLForge/utils/nvtristriplib/: nvtristrip.cpp  nvtristrip.h  nvtristripobjects.cpp  nvtristripobjects.h  vertexcache.cpp  vertexcache.h
tools/MDLForge/utils/studiomdl/: CMakeLists.txt  bmpread.cpp  collisionmodel.cpp  collisionmodel.h  fs_globals.cpp  hardwarematrixstate.cpp  hardwarevertexcache.cpp  matsys.cpp  matsys.h  optimize.cpp  perfstats.cpp  platform_shim.h  studiomdl.cpp  tier0_stubs.cpp  tristrip.cpp  unifylods.cpp  write.cpp
tools/studiomdl/: .gitignore  README.md
(+39 files in other folders)
